<resources>
    <string name="app_name">SheetLeaf</string>
    <string name="title">SheetLeaf</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_pass">Glemt kodeord?</string>
    <string name="new_profile">Ny Profil!</string>
    <string name="login_btn">Log in</string>
    <string name="create_user_title">Opret Profil</string>
    <string name="name_hint">Navn</string>
    <string name="terms_confirmation">Jeg accepterer hermed at min data bliver brugt i overensstemmelse med VILKÅR OG BETINGELSER.</string>
    <string name="terms_link"><u>VILKÅR OG BETINGELSER</u></string>
    <string name="parents_confirmation">Jeg erkender hermed at jeg er over 13år gammel eller at jeg har fået lov af en forældre eller værge til at bruge denne app.</string>
    <string name="password_repeat">Gentag Password</string>
    <string name="create_profile_btn">Opret!</string>

    <!-- Errors -->
    <string name="exception_error">NULL Exception</string>
    <string name="common_206">Der skete en manglende data fejl.</string>
    <string name="common_400">Der skete en fejl i backenden</string>
    <string name="common_500">Der skete en intern fejl.</string>
    <string name="common_unknown_error">Der skete en ukendt fejl.</string>


    <!-- Create profile-->
    <string name="create_profile_success">Profil %s oprettet!</string>
    <string name="create_profile_data_error">Der skete en fejl med at modtage data</string>
    <string name="create_profile_400">Der skete en fejl under oprettelsen.</string>
    <string name="create_profile_409">En bruger med den email findes allerede.</string>
    <string name="bot_nav_games">Spil</string>
    <string name="bot_nav_character_sheet">Karakterblad</string>
    <string name="bot_nav_settings">Indstillinger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login -->
    <string name="login_success">Velkommen %s, til SheetLeaf!</string>
    <string name="login_403">Forkert email eller kodeord</string>
    <string name="login_404">En bruger med den email blev ikke fundet</string>
    <string name="character_header">Karakterer</string>
    <string name="gameoverview_game_header">Spil:</string>
    <string name="title_activity_create_character">CreateCharacterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="create_charactersheet">Opret karakterblad</string>
    <string name="edit_string">Rediger</string>
    <string name="preview_string">Forhåndsvisning</string>
    <string name="insert_string">Indsæt</string>
    <string name="save_string">Gem</string>
    <string name="title_string">Title:</string>
    <string name="long_text_field_header">Long Text Field</string>
    <string name="alert_personal_character">Det kan altid ændres senere</string>
    <string name="name_header">Navn:</string>
    <string name="choose_string">Vælg</string>

    <string-array name="character_creation_insert_array">
        <item>Lang tekst</item>
        <item>Kort tekst</item>
        <item>Heltal</item>
    </string-array>



</resources>