<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paper">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textTitle"
            android:text="@string/create_user_title"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textSmall"
            android:text="@string/email_hint"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            style="@style/TextZone"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textEmailAddress" >
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textSmall"
            android:text="@string/name_hint"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:hint="@string/name_hint"
            style="@style/TextZone"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textSmall"
            android:text="@string/password_hint"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:hint="@string/password_hint"
            style="@style/TextZone"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:hint="@string/password_repeat"
            style="@style/TextZone"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/termsConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/terms_confirmation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termsLink"
            android:text="@string/terms_link"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:textColor="@color/light_blue_600"
            />

        <CheckBox
            android:id="@+id/parentsConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/parents_confirmation"/>

        <Button
            android:id="@+id/createProfileBtn"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="end"
            android:text="@string/create_profile_btn" />
</LinearLayout>