<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".outside.LoginActivity"
    android:background="@color/paper">
    <!--TODO: add change language -->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textTitle"
        android:text="@string/title"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_margin="20dp"
        tools:viewBindingIgnore="true"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="2">


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            style="@style/TextZone"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            style="@style/TextZone"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:clickable="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:viewBindingIgnore="true" >
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text"
                android:layout_weight="50"
                android:textColor="@color/colorLink"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/forgot_pass" />
            <TextView
                android:id="@+id/newProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text"
                android:layout_weight="50"
                android:textColor="@color/colorLink"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/new_profile" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>