<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inside.gamesOverview.create.CreateCharacterActivity"
    android:background="@color/paper"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textTitle"
            android:text="@string/create_charactersheet"
            android:textSize="54sp"
            android:layout_marginBottom="6dp"/>
        <LinearLayout

            android:id="@+id/edit_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:orientation="vertical"
            android:background="@color/yellowishPaper">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/edit_string"
                        style="@style/text"
                        android:textSize="24sp"
                        android:paddingVertical="4dp"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/edit_swap"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="4dp"
                        app:srcCompat="@drawable/ic_baseline_switch_left_24"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerEditCharacterSheet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/yellowishPaper"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/BtnInsertCharactersheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_string"
                    android:gravity="center"
                    android:layout_margin="8dp"/>

                <Spinner
                    android:id="@+id/spinnerEditCharactersheet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    style="@style/text"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/preview_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/GreyPaper"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/preview_string"
                    style="@style/text"
                    android:textSize="24sp"
                    android:paddingVertical="4dp"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/preview_swap"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="4dp"
                    app:srcCompat="@drawable/ic_baseline_switch_right_24"/>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPreviewCharacterSheet"
                android:background="@color/GreyPaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:gravity="end">

        <Button
            android:id="@+id/BtnSaveCharactersheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_string"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

</LinearLayout>